# dedalus-GFD

./: .gitignore  README.md  install_requirements.sh  pyproject.toml  requirements.txt  test.py  testAnimation.py  testLapCor.py  testRotation.py  testStommel.py
spectralGFD/: __init__.py  basicSolver.py  conformal.py  fileHandling.py  laplaceCoriolis.py  plotting.py  rotationPDE.py  specialFunctions.py  stommelMunk.py  timeSolver.py
